<resources>
    <string name="app_name">Catalogo de Actividades ASDE</string>
    <string name="event_name">Nombre Actividad</string>
    <string name="description">DESCRIPCIÓN</string>
    <string name="event_description">La descripción de la actividad</string>
    <string name="characteristics">CARACTERÍSTICAS</string>
    <string name="event_characteristics">las caracteristicas de la actividad</string>
    <string name="measures">MEDIDAS PREVENTIVAS</string>
    <string name="event_measures">Las medidas preventivas de la actividad:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
